--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_bloc: ^8.1.5
+  bloc: ^8.1.4
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  firebase_auth: ^4.16.0
+  firebase_storage: ^11.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
