--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-
-  equatable: ^2.0.5
+  image_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +19,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
